temporarily disabling Gaben.

--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -268,8 +268,8 @@ html(lang="de")
 								.col-xs-3.col-sm-2.col-lg-1
 									input.unlock(type="number", name="Talente[Schriften][#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
-				section#Gaben.tab-pane.panel.panel-default.text-center
-					//- 
+				//-section#Gaben.tab-pane.panel.panel-default.text-center
+					// 
 						Tierempathie [allgemein] => Spezialisierung
 						Gaben generell aus den Vorteilen Heraussuchen
 					.panel-heading
