rounding some numbers.

--- a/views/held/held.jade
+++ b/views/held/held.jade
@@ -468,8 +468,8 @@ html(lang="de")
 										span=__item.Name
 										input.pull-right(type="radio", name="panzerung", value=__item.BE)
 								.row.dcm-row.text-center.dcm-table
-									.col-xs-6.col-sm-2.col-md-1.col-md-offset-1=__item.BE
-									.col-xs-6.col-sm-2.col-md-1=__item.RS
+									.col-xs-6.col-sm-2.col-md-1.col-md-offset-1=__item.BE.toFixed(2)
+									.col-xs-6.col-sm-2.col-md-1=__item.RS.toFixed(1)
 									.col-xs-3.col-sm-1.col-md-offset-1=__item.Ko
 									.col-xs-3.col-sm-1=__item.Br
 									.col-xs-3.col-sm-1=__item.Rü
