--- a/views/splash.jade
+++ b/views/splash.jade
@@ -1,10 +1,8 @@
 doctype html
 html(lang="de")
 	head
-		meta(charset="utf-8")
+		include inc-bootstrap
 		title DCM – DSA Charakter Manager
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		style.
 			body {
 				padding-top: 5em;
