--- a/views/users/profil.jade
+++ b/views/users/profil.jade
@@ -56,9 +56,7 @@ html(lang="de")
 									| : #{_User.local.name}
 								a.btn.btn-sm.btn-default(href="/unlink/local") Trennen
 								| &nbsp;
-								a.btn.btn-sm.btn-default(href="/change/local") Passwort ändern
-								| &nbsp;
-								a.btn.btn-sm.btn-default(href="/setup/local") Daten ändern
+								a.btn.btn-sm.btn-default(href="/change/local") Daten ändern
 							else
 								a.btn.btn-sm.btn-default(href="/connect/local") Verbinden
 				.col-sm-6
