--- a/views/edit-held/kleidung.jade
+++ b/views/edit-held/kleidung.jade
@@ -87,9 +87,9 @@ html(lang="de")
 									.col-xs-3.col-sm-1
 										input#rb(type="number", min="0", step="1", value="0" title="Rechtes Bein")
 									.col-xs-3.col-xs-offset-6.col-sm-1.col-sm-offset-1
-										input#rs(type="number", min="0", step="0.1", value="0", title="Behinderung")
+										input#be(type="number", min="0", step="0.1", value="0", title="Behinderung")
 									.col-xs-3.col-sm-2
-										input#be.long(type="number", min="0", step="0.05", value="0", title="Rüstungsschutz")
+										input#rs.long(type="number", min="0", step="0.05", value="0", title="Rüstungsschutz")
 
 				#save.row.well.text-center
 					.col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4.text-center
