fixing copy/paste errors.

--- a/views/edit-held/basiswerte.jade
+++ b/views/edit-held/basiswerte.jade
@@ -130,7 +130,7 @@ html(lang="de")
 									.col-sm-7.col-sm-offset-1
 										.row
 											.col-sm-4.col-md-2.col-md-offset-1
-												input#ws-mod.form-control.text-center(name="modifikatoren[WS]", type="number", step="1", value=_Held.modifikatoren.INI)
+												input#ws-mod.form-control.text-center(name="modifikatoren[WS]", type="number", step="1", value=_Held.modifikatoren.WS)
 							.row
 								.form-group.container-fluid
 									.col-sm-3.col-sm-offset-1
@@ -138,7 +138,7 @@ html(lang="de")
 									.col-sm-7.col-sm-offset-1
 										.row
 											.col-sm-4.col-md-2.col-md-offset-1
-												input#gs-mod.form-control.text-center(name="modifikatoren[GS]", type="number", step="1", value=_Held.modifikatoren.INI)
+												input#gs-mod.form-control.text-center(name="modifikatoren[GS]", type="number", step="1", value=_Held.modifikatoren.GS)
 				.well.text-center#save
 					.row.dcm-row
 						.col-sm-4.col-sm-offset-1
