fixing broken ritual pre-selection.

--- a/views/held/magie.jade
+++ b/views/held/magie.jade
@@ -271,7 +271,7 @@ html(lang="de")
 											else
 												.col-xs-12 &nbsp;
 										.row
-											.col-xs-12=__rkl.join(', ')
+											.col-xs-12=__rkl.join(', ') || "\u00A0"
 									.col-xs-6.col-sm-4.col-md-3
 										.row.dcm-col-divider
 											.col-xs-12=__rit.Modifikator || "\u00A0"
