--- a/views/edit-held/rituale.jade
+++ b/views/edit-held/rituale.jade
@@ -17,6 +17,16 @@ mixin print(__data)
 -		return null;
 -	}
 
+- 	function ritualIsAvailable(__list, __talent) { 
+- 		var l = __list ? __list.length : 0;
+- 		while (l--) { 
+- 			if (__list[l].Name === __talent.Name) {
+- 				return true; 
+- 			}
+- 		} 
+- 		return false; 
+- 	}
+
 include ../inc-mixins
 
 doctype html
@@ -128,11 +138,11 @@ html(lang="de")
 					.panel-heading.dcm-caption Rituale
 					ul.list-group
 						each __rit, __idx in _Rituale
-							- var __isAvailable  = isAvailable(_Held.Magie.Rituale, __rit)
+							- var __isAvailable  = ritualIsAvailable(_Held.Magie.Rituale, __rit)
 							- var __talente      = []
-							if Array.isArray(__rit.Talent)
+							if Array.isArray(__rit.Talent) && __rit.Talent.length > 0
 								- __talente      = __rit.Talent.concat()
-							if Array.isArray(__rit.Probe)
+							if Array.isArray(__rit.Probe) && __rit.Probe.length > 0
 								- __talente.push(__rit.Probe.join(' · '))
 							li.list-group-item
 								.row(class=__isAvailable ? 'selected' : '')
@@ -239,248 +249,3 @@ html(lang="de")
 					input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
 
 		script(src="/js/edit-ritual.js")
-		//-main
-			form(action="/rituale/"+_held._id, method="post", accept-charset="utf-8")
-				input(type="hidden", name="_method", value="put")
-				
-				section#ritualkenntnis
-					table.data-section.eigenschaften.mitte#tbl-rk
-						caption Ritualkenntnis
-						colgroup
-							col(style="width: 2em;")
-							col
-							col
-							col(span="2", style="width: 10em;")
-						thead
-							tr
-								td
-								th Ritualkenntnis
-								th Tradition
-								th Lernstufe
-								th RkW
-						tfoot
-							tr
-								td
-								td.links
-									select#rk.fullSize(size="1", title="Allgemeine Ritualkenntnisse")
-										optgroup(label="Allgemeine RK")
-											each __long, __short in _data.Ritualkenntnis
-												if typeof __long === "string"
-													option(data-long=__long, data-short=__short)=__long
-								td
-								td(colspan="2")
-									button#addrk(type="button") neue Ritualkenntnis
-							tr
-								td
-								td.links Zaubertänzer
-								td
-									select#rkz.fullSize(size="1", title="Zaubertänzer")
-										optgroup(label="Zaubertänzer")
-											each __long, __short in _data.Ritualkenntnis.Zaubertänzer
-												option(data-long="Zaubertänzer", data-short="Ztz", data-rep-short=__short, data-rep-long=__long)=__long
-								td(colspan="2")
-									button#addrkz(type="button") neue Ritualkenntnis
-							tr
-								td
-								td.links Schamane
-								td
-									select#rks.fullSize(size="1", title="Schamanen")
-										optgroup(label="Schamanen")
-											each __long, __short in _data.Ritualkenntnis.Schamane
-												option(data-long="Schamane", data-short="Shm", data-rep-short=__short, data-rep-long=__long)=__long
-								td(colspan="2")
-									button#addrks(type="button") neue Ritualkenntnis
-						tbody
-							if Array.isArray(_held.Magie.Ritualkenntnis)
-								each __rk, __idx in _held.Magie.Ritualkenntnis
-									case __rk.short
-										when "Ztz"
-											tr
-												td(style="padding: 0;")
-													input.isactive(type="checkbox", id="zt_"+__idx, checked)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][short]", value="Ztz")
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][long]", value=__rk.long)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][tradition]", value=__rk.tradition)
-												td.links
-													label.links(for="zt_"+__idx) Zaubertänzer
-												td
-													label(for="zt_"+__idx)=__rk.long
-												td
-													select.unlock(size="1", name="Magie.Ritualkenntnis[#{__idx}][Lernstufe]")
-														each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-															option(selected=(__rk.Lernstufe === kat))= kat
-												td
-													input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[#{__idx}][RkW]", min="3", max="35", step="1", value=__rk.RkW)
-										when "Shm"
-											tr
-												td(style="padding: 0;")
-													input.isactive(type="checkbox", id="sr_"+__idx, checked)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][_talent]", value=__rk._talent._id)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][short]", value="Shm")
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][long]", value=__rk.long)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][tradition]", value=__rk.tradition)
-												td.links
-													label(for="sr_"+__idx)=__rk._talent.name
-												td
-													label(for="sr_"+__idx)=__rk.long
-												td
-													select.unlock(size="1", name="Magie.Ritualkenntnis[#{__idx}][Lernstufe]")
-														each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-															option(selected=(__rk.Lernstufe === kat))= kat
-												td
-													input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[#{__idx}][RkW]", min="3", max="35", step="1", value=__rk.RkW)
-										default
-											tr
-												td(style="padding: 0;")
-													input.isactive(type="checkbox", id="rk_"+__idx, checked)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][short]", value=__rk.short)
-													input.unlock(type="hidden", name="Magie.Ritualkenntnis[#{__idx}][long]", value=__rk.long)
-												td.links
-													label(for="rk_"+__idx)=__rk.long
-												td
-												td
-													select.unlock(size="1", name="Magie.Ritualkenntnis[#{__idx}][Lernstufe]")
-														each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-															option(selected=(__rk.Lernstufe === kat))= kat
-												td
-													input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[#{__idx}][RkW]", min="3", max="35", step="1", value=__rk.RkW)
-				section#rituale
-					table.data-section.eigenschaften.tablesorter#newrit
-						caption Ritual hinzufügen
-						colgroup
-							col(style="width: 2em;")
-							col(style="width: 30%;")
-							col(span="3")
-						thead
-							tr
-								td
-								th Ritual
-								th Probe
-								th RK
-								th Tradition
-						tbody
-							each __rit, __idx in _rituale
-								- var __isAvailable  = isAvailable(_held.Magie.Rituale, __rit)
-								tr(class=__isAvailable?'selected':'')
-									td.mitte(style="padding: 0;")
-										input(type="checkbox", name="Magie.Rituale[#{__idx}]", value=__rit._id, id="rit_"+__idx, checked=__isAvailable)
-									td
-										label(for="rit_"+__idx)=__rit.Name
-									td.mitte
-										if Array.isArray(__rit.Probe)
-											div=__rit.Probe.join(' · ')
-										if Array.isArray(__rit.Talent)
-											div=__rit.Talent.join(', ')
-									td=__rit.Repräsentationen.join(', ')
-									if __rit.Traditionen
-										td=__rit.Traditionen.join(', ')
-									else
-										td
-				
-				section#save
-					.mitte
-						button(type="submit") speichern
-		//-aside
-			table#tbl-tmpl
-				tbody#tmpl-allg
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="rk_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]").short
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-						td.links
-							label(for="rk_{index}")
-						td
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-				tbody#tmpl-tanz
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="zt_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]", value="Ztz")
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][tradition]").short
-						td.links
-							label.links(for="zt_{index}") Zaubertänzer
-						td
-							label(for="zt_{index}").long
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-				tbody#tmpl-schm
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="sr_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][_talent]", value=getTalentID(_talente, "Geister binden"))
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]", value="Shm")
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][tradition]").short
-						td.links
-							label(for="sr_{index}") Geister binden
-						td
-							label(for="sr_{index}").long
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="sr_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][_talent]", value=getTalentID(_talente, "Geister rufen"))
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]", value="Shm")
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][tradition]").short
-						td.links
-							label(for="sr_{index}") Geister rufen
-						td 
-							label(for="sr_{index}").long
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="sr_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][_talent]", value=getTalentID(_talente, "Geister bannen"))
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]", value="Shm")
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][tradition]").short
-						td.links
-							label(for="sr_{index}") Geister bannen
-						td 
-							label(for="sr_{index}").long
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-					tr
-						td(style="padding: 0;")
-							input.isactive(type="checkbox", id="sr_{index}", checked)
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][_talent]", value=getTalentID(_talente, "Geister aufnehmen"))
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][short]", value="Shm")
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][long]").long
-							input.unlock(type="hidden", name="Magie.Ritualkenntnis[{index}][tradition]").short
-						td.links
-							label(for="sr_{index}") Geister aufnehmen
-						td 
-							label(for="sr_{index}").long
-						td
-							select.unlock(size="1", name="Magie.Ritualkenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td
-							input.unlock.mitte(type="number", name="Magie.Ritualkenntnis[{index}][RkW]", min="3", max="35", step="1", value="3")
-		//-script(src="/edit-ritual.js")
